# handbox

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUG_TOOL_EXECUTE_STATUS.md  FRONTEND_SIMPLIFIED_STATUS_CHECK.md  FRONTEND_TOOL_EXECUTE_INTEGRATION.md  GEMINI.md  README.md  TOOL_EXECUTE_CALLBACK_CHANGELOG.md  TOOL_EXECUTION_EVENTS.md  package-lock.json  package.json  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  llm_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/handbox-llm/: Cargo.toml
src-tauri/crates/handbox-llm/src/: client.rs  config.rs  error.rs  hand_ai_catalog.rs  lib.rs  types.rs
src-tauri/crates/handbox-llm/src/chat/: anthropic_adapter.rs  chat_client.rs  google_adapter.rs  hand_ai_adapter.rs  mod.rs  openai_completions_adapter.rs  openai_responses_adapter.rs  types.rs
src-tauri/crates/handbox-llm/src/model/: anthropic_adapter.rs  google_adapter.rs  mod.rs  model_client.rs  openai_adapter.rs  openai_with_local_adapter.rs  openrouter_adapter.rs  oss_client.rs  supplement.rs  types.rs
src-tauri/crates/handbox-llm/tests/: test_supported_methods.rs
src-tauri/crates/handbox-mcp/: Cargo.toml
src-tauri/crates/handbox-mcp/src/: client.rs  lib.rs  mod.rs  types.rs  utils.rs
src-tauri/crates/tao/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
src-tauri/crates/tao-0.34.3/: .cargo_vcs_info.json
src-tauri/examples/: model_fetch_demo.rs
src-tauri/icons/: icon.icns
src-tauri/macos-obs/: Package.swift
src-tauri/macos-obs/Sources/macos-obs/: Observer.swift
src-tauri/migrations/: 001_create_providers.sql  002_add_api_key_to_providers.sql  002_insert_predefined_providers.sql  003_remove_probe_fields.sql  004_fix_provider_type_quotes.sql  005_add_favorite_to_models.sql  006_create_chats_and_messages.sql  007_restructure_chat_config.sql  008_add_reasoning_to_messages.sql  009_create_mcps_table.sql  010_add_tools_to_messages.sql  011_add_turn_id_to_messages.sql  012_add_tool_call_id_to_messages.sql  013_add_mcp_connection_type.sql  014_add_prompts_resources_to_mcps.sql  015_add_enabled_tools_to_mcps.sql  016_add_tool_execution_mode_to_mcps.sql  016_add_turn_count_to_chats.sql  017_update_models_schema.sql  018_add_parameters_to_models.sql  019_split_parameters.sql  020_rename_output_token_limit.sql  021_create_users_and_sessions.sql  022_add_url_to_models.sql  022_update_pricing_structure.sql  023_add_supported_methods_to_models.sql  024_add_model_created_at.sql  025_add_supported_parameters_to_models.sql  026_remove_cost_fields_from_models.sql  027_add_top_k_to_chats.sql  028_add_reasoning_to_chats.sql  029_add_generated_assets_to_messages.sql  029_add_generated_images_to_messages.sql  030_create_artifacts_table.sql  031_add_words.sql  032_add_word_explanation_and_lookup_history.sql  033_create_favorites_table.sql  034_add_selected_text_to_favorites.sql  035_add_title_to_favorites.sql  036_add_original_message_id_to_favorites.sql  (+20 more)
src-tauri/resources/: generative-ui-prompt.txt
src-tauri/src/: accessibility.rs  lib.rs  llm_client.rs  main.rs  menu.rs  tray.rs
src-tauri/src/clients/: api_provider.rs  chat_client.rs  llm_client.rs  mod.rs  model_client.rs
src-tauri/src/commands/: accessibility.rs  agent.rs  agent_project.rs  agent_run.rs  agent_session.rs  artifact.rs  auth.rs  chat.rs  clipboard.rs  debug.rs  favorite.rs  genui.rs  hand_ai.rs  image.rs  job.rs  llm_config.rs  mcp.rs  message.rs  mod.rs  model.rs  open_in.rs  provider.rs  quick_action.rs  search.rs  selection.rs  session.rs  settings.rs  skill.rs  window.rs  word.rs
src-tauri/src/config/: app.rs  database.rs  llm_config.rs  mod.rs
src-tauri/src/llm_client/: client.rs  mod.rs  types.rs
src-tauri/src/llm_client/chat/: anthropic_adapter.rs  chat_client.rs  google.rs  google_adapter.rs  mod.rs  openai_completions_adapter.rs  openai_responses_adapter.rs
src-tauri/src/llm_client/model/: anthropic_adapter.rs  google_adapter.rs  mod.rs  model_client.rs  openai.rs  openai_adapter.rs  openai_with_local.rs  openai_with_local_adapter.rs  openrouter.rs  openrouter_adapter.rs
src-tauri/src/mcp_client/: client.rs  error.rs  factory.rs  mod.rs  process.rs  sse.rs  streamable_http.rs  types.rs  utils.rs
src-tauri/src/models/: artifact.rs  chat.rs  chat_test.rs  error.rs  llm_client.rs  llm_config.rs  llm_types.rs  mcp.rs  message.rs  message_test.rs  mod.rs  model.rs  provider.rs  search.rs  settings.rs  user.rs  word.rs
src-tauri/src/services/: agent.rs  agent_jsonl_store.rs  agent_migration.rs  agent_permission.rs  agent_project.rs  agent_run_types.rs  agent_runtime.rs  agent_session.rs  agent_tools.rs  artifact.rs  auth.rs  catalog_sync.rs  chat.rs  chat_engine.rs  chat_test.rs  coding_agent_runtime.rs  coding_agent_session.rs  database.rs  genui.rs  job.rs  job_executor.rs  job_scheduler.rs  llm_config.rs  mcp.rs  message.rs  message_test.rs  mod.rs  model.rs  model_data.rs  oss_client.rs  provider.rs  provider_repository.rs  provider_test.rs  quick_action.rs  search.rs  selection.rs  selection_panel.rs  session.rs  settings.rs  skill_service.rs  (+4 more)
src-tauri/src/services/provider_clients/: api_provider.rs  llm_client.rs  mod.rs  model_list_provider.rs
src-tauri/src/services/selection/: content_panel.rs  manager.rs  menu_panel.rs  mod.rs  quick_action_panel.rs  settings_disable_panel.rs  settings_panel.rs
src-tauri/src/storage/: agent_project_repository.rs  agent_repository.rs  agent_session_repository.rs  artifact_repository.rs  chat_repository.rs  database.rs  favorite_repository.rs  genui_repository.rs  job_repository.rs  mcp_repository.rs  message_repository.rs  mod.rs  model_repository.rs  provider_repository.rs  session_repository.rs  word_repository.rs
src-tauri/src/storage/types/: agent.rs  agent_project.rs  agent_session.rs  artifact.rs  chat.rs  common.rs  favorite.rs  genui.rs  job.rs  mcp.rs  message.rs  mod.rs  model.rs  provider.rs  session.rs  word.rs
src-tauri/src/utils/: accessibility.rs  app_info.rs  cron.rs  crypto.rs  frontmatter.rs  logger.rs  mod.rs  validation.rs
src-tauri/tests/: agent_live.rs
(+397 files in other folders)
