[package]
name = "handbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
rand = "0.8"
url = "2.5"
regex = "1.0"
tiny_http = "0.12"
base64 = "0.22"
jsonwebtoken = "9.3"
dotenvy = "0.15"
urlencoding = "2.1"
once_cell = "1.19"
openai-rust = { path = "../../../openai-rust/openai-rust" }
google-genai-rust = { path = "../../../google-genai-rust/google-genai-rust" }
async-stream = "0.3"
rmcp = { version = "0.7", features = [
    "client",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
] }
shlex = "1.3"
image = "0.25"
arboard = "3.4"
handbox-llm = { path = "crates/handbox-llm" }
handbox-mcp = { path = "crates/handbox-mcp" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.23"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "NSPanel", "NSResponder", "NSRunningApplication", "NSScreen", "NSWindow", "NSWorkspace", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSString", "NSURL"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
rdev = { git = "https://github.com/Narsil/rdev", branch = "main" }
accessibility = { git = "https://github.com/eiz/accessibility" }

[dev-dependencies]
tempfile = "3.21.0"


