[package]
name = "handbox"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = "1.0"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
rand = "0.8"
url = "2.5"
regex = "1.0"
tiny_http = "0.12"
base64 = "0.22"
jsonwebtoken = "9.3"
dotenvy = "0.15"
urlencoding = "2.1"
once_cell = "1.19"
# Align with hand-ai/crates/model so both pull the same crate copy
# (avoids double-link). See exec-plans/hand-ai-integration.md.
openai-rust = { git = "https://github.com/wanggang316/openai-rust", tag = "v0.2.1" }
google-genai-rust = { git = "https://github.com/wanggang316/google-genai-rust", tag = "v0.1.0" }
async-stream = "0.3"
rmcp = { version = "0.7", features = [
    "client",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
] }
shlex = "1.3"
image = "0.25"
arboard = "3.4"
handbox-mcp = { path = "crates/handbox-mcp" }
# Direct dep on hand-ai's model crate for services/chat_engine.rs (M2-T1).
# Pinned to hand-ai's `model-v0.2.0` tag. Single source of truth for
# provider catalog + chat after the dissolve-handbox-llm migration.
hand-ai-model = { git = "ssh://git@github.com/wanggang316/hand-ai.git", tag = "model-v0.2.0", package = "model" }
tokio-util = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.23"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "NSPanel", "NSResponder", "NSRunningApplication", "NSScreen", "NSWindow", "NSWorkspace", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSString", "NSURL"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
rdev = { git = "https://github.com/Narsil/rdev", branch = "main" }
accessibility = { git = "https://github.com/eiz/accessibility" }
accessibility-sys = { git = "https://github.com/eiz/accessibility" }
# Swift 桥接
swift-rs = "1.0"
mouce = "0.3.0"

[dev-dependencies]
tempfile = "3.21.0"


