[package]
name = "handbox-llm"
version = "0.1.0"
edition = "2021"
description = "Handbox LLM client library"
license = "MIT"

[features]
default = []
# Routes chat through hand-ai/crates/model instead of the per-provider adapters.
# Dark by default until parity is verified per-provider. See docs/exec-plans/hand-ai-integration.md.
hand-ai = ["dep:hand-ai-model"]

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
# NOTE: refs MUST match exactly what `hand-ai/crates/model` uses (URL with no `.git`,
# tag form, not branch) — otherwise cargo treats them as distinct crates and
# double-links both copies when the `hand-ai` feature is on. Verified
# with `cargo tree -d` on 2026-05-25; tag commits are equivalent to former
# master/main HEAD on each fork.
openai-rust = { git = "https://github.com/wanggang316/openai-rust", tag = "v0.2.1" }
google-genai-rust = { git = "https://github.com/wanggang316/google-genai-rust", tag = "v0.1.0" }
rmcp = { version = "0.7", features = ["client"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }
aliyun-oss-rs = { version = "0.3.0" }
regex = "1.0"
base64 = "0.22"

# Pinned to hand-ai main HEAD on 2026-05-25 (commit 5dec8aa9). Confirmed
# with hand-ai maintainer not to be force-pushed this week.
# TODO: switch to tag `model-v0.1.0` once hand-ai issue #34 lands.
hand-ai-model = { git = "ssh://git@github.com/wanggang316/hand-ai.git", rev = "5dec8aa91a7fa80c696e30072ce361e51f7d3bca", package = "model", optional = true }
