[package]
name = "handbox-mcp"
version = "0.1.0"
edition = "2021"
description = "Handbox MCP client library"
license = "MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.7", features = [
    "client",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
shlex = "1.3"
tokio = { version = "1.0", features = ["macros", "rt", "sync", "process", "time"] }

[dev-dependencies]
tempfile = "3.21.0"
